--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_fonts: ^6.3.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_svg: ^2.2.1
+  flutter_spinkit: ^5.2.2
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +60,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/onboarding/
+    - assets/auth/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
