--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_spinkit: ^5.2.2
   smooth_page_indicator: ^1.2.1
   image_picker: ^1.2.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,6 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
-    - assets/icons/
     - assets/onboarding/
     - assets/auth/
 
