--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   image_picker: ^1.2.0
   flutter_screenutil: ^5.9.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
