--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   intl: ^0.20.2
   cached_network_image: ^3.4.1
+  skeletonizer: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
